--- a/index.html
+++ b/index.html
@@ -1066,10 +1066,7 @@
            Tipo de Mensaje
           </label>
 <select class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-500 focus:border-green-500" id="tipo-mensaje" onchange="generarMensaje()">
-<option value="">
-            Seleccionar tipo
-           </option>
-<option value="recibido">
+<option value="recibido" selected>
             Equipo Recibido
            </option>
 <option value="diagnostico">
