Update2 index.html

--- a/index.html
+++ b/index.html
@@ -2790,7 +2790,9 @@
                         <div class="print-title">${nombre_taller}</div>
                         <div class="print-subtitle">COPIA CLIENTE</div>
                         <div class="print-order">ORDEN #${reparacion.id}</div>
-                    
+                     <div class="print-separator"></div>
+
+                     
                     <div class="print-section">
                         <div class="print-row">
                             <div class="print-label">Cliente:</div>
