Update4 index.html

--- a/index.html
+++ b/index.html
@@ -3,75 +3,19 @@
 
 <!-- saved from url=(0053)file:///C:/Users/Osk/Downloads/megusta_adjusted.html# -->
 <html lang="es">
-\1
+<head>
 
-  <!-- === SEO Core === -->
+  <!-- SEO básico (seguro) -->
   <meta name="title" content="Fixly Taller — Sistema de Gestión de Reparaciones">
-  <meta name="description" content="Sistema completo para talleres: órdenes, historial, WhatsApp, técnicos y comprobantes. Rápido, liviano y listo para posicionar.">
-  <meta name="keywords" content="taller de celulares, sistema de reparaciones, software de taller, órdenes de reparación, gestión de clientes">
-  <meta name="author" content="Fixly Taller">
-  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+  <meta name="description" content="Gestión integral para talleres: órdenes, historial, clientes y comprobantes.">
   <link rel="canonical" href="https://app.fixlytaller.com/">
-  <link rel="alternate" hreflang="es-AR" href="https://app.fixlytaller.com/">
-  <link rel="alternate" hreflang="x-default" href="https://app.fixlytaller.com/">
-
-  <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Fixly Taller">
   <meta property="og:title" content="Fixly Taller — Sistema de Gestión de Reparaciones">
-  <meta property="og:description" content="Gestión integral para talleres: tickets, historial, WhatsApp, técnicos y más.">
+  <meta property="og:description" content="Gestión integral para talleres.">
   <meta property="og:url" content="https://app.fixlytaller.com/">
-  <meta property="og:image" content="https://app.fixlytaller.com/assets/og-image.jpg">
-
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Fixly Taller — Sistema de Gestión de Reparaciones">
-  <meta name="twitter:description" content="Gestión integral para talleres: tickets, historial, WhatsApp, técnicos y más.">
-  <meta name="twitter:image" content="https://app.fixlytaller.com/assets/og-image.jpg">
-
-  <!-- Icons / Manifest -->
-  <link rel="icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="manifest" href="/site.webmanifest">
-
-  <!-- Preconnect / DNS Prefetch (perf) -->
-  <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
-  <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
-  <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
-  <link rel="dns-prefetch" href="https://fonts.gstatic.com">
-
-  <!-- JSON-LD Organization + WebSite with SearchAction -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "Fixly Taller",
-    "url": "https://app.fixlytaller.com/",
-    "logo": "https://app.fixlytaller.com/assets/logo.png",
-    "sameAs": []
-  }
-  </script>
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "WebSite",
-    "name": "Fixly Taller",
-    "url": "https://app.fixlytaller.com/",
-    "potentialAction": {
-      "@type": "SearchAction",
-      "target": "https://app.fixlytaller.com/?q={search_term_string}",
-      "query-input": "required name=search_term_string"
-    }
-  }
-  </script>
-
-  <!-- Core Web Vitals hints -->
-  <meta http-equiv="x-dns-prefetch-control" content="on">
-  <meta name="theme-color" content="#0ea5e9">
-  <link rel="preload" as="script" href="https://cdn.jsdelivr.net/npm/chart.js" fetchpriority="low">
-  <!-- End SEO Core -->
+  <meta name="twitter:card" content="summary">
+  <!-- /SEO básico -->
 
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
@@ -464,7 +408,7 @@
 <script src="https://cdn.tailwindcss.com">
 </script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" referrerpolicy="no-referrer" rel="stylesheet"/>
-<script src="https://cdn.jsdelivr.net/npm/chart.js" defer>
+<script src="https://cdn.jsdelivr.net/npm/chart.js">
 </script>
 <style>
   /* Mostrar solo las 5 filas más recientes del historial de WhatsApp (oculta el resto visualmente) */
@@ -508,25 +452,8 @@
 @media (max-width: 900px){
   .trio-line { grid-template-columns: 1fr; }
 }
-</style>
-  <!-- Google Ads (placeholder) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-XXXXXXXXX"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'AW-XXXXXXXXX'); // TODO: reemplazar con ID real
-  </script>
-  <!-- End Google Ads -->
-
-</head>
-\1
-
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-XXXXXXX"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End GTM (noscript) -->
-
+</style></head>
+<body class="bg-gray-100">
 <script>
   // utilidades mínimas
   function _digits(s){ return String(s||'').replace(/\D/g,''); }
@@ -2752,17 +2679,7 @@
             ventanaImpresion.document.write(`
                 <!DOCTYPE html>
                 <html>
-                \1
-
-  <!-- Google Tag Manager (placeholder) -->
-  <script>
-    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});
-    var f=d.getElementsByTagName(s)[0], j=d.createElement(s), dl=l!='dataLayer'?'&l='+l:'';
-    j.async=true; j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl; f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-XXXXXXX');
-  </script>
-  <!-- End GTM -->
-
+                <head>
                     <title>Comprobante #${reparacion.id}</title>
                     <style>
   @page { size: A4; margin: 10mm; }
@@ -2950,17 +2867,40 @@
                         Los trabajos de software y configuraciones no tienen garantía.
                     </div>
                 
+  <!-- Carga aislada de GTM y Google Ads -->
   <script>
-    // Abrir enlaces externos en nueva pestaña con noopener
-    document.addEventListener('DOMContentLoaded', function(){
-      document.querySelectorAll('a[href^="http"]').forEach(a => {
-        if (!a.href.includes(location.hostname)) {
-          a.setAttribute('target','_blank');
-          a.setAttribute('rel','noopener');
-        }
-      });
-    });
+  document.addEventListener('DOMContentLoaded', function() {
+    // IDs a completar
+    var GTM_ID = 'GTM-XXXXXXX';      // TODO: reemplazar
+    var ADS_ID = 'AW-XXXXXXXXX';     // TODO: reemplazar
+
+    // Google Tag Manager
+    if (GTM_ID && !document.querySelector('script[src*="googletagmanager.com/gtm.js"]')) {
+      (function(w,d,s,l,i){
+        w[l]=w[l]||[]; w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});
+        var f=d.getElementsByTagName(s)[0], j=d.createElement(s), dl=l!='dataLayer'?'&l='+l:'';
+        j.async=true; j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl; f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer',GTM_ID);
+      // noscript iframe opcional
+      var ns=document.createElement('noscript');
+      ns.innerHTML='<iframe src="https://www.googletagmanager.com/ns.html?id='+GTM_ID+'" height="0" width="0" style="display:none;visibility:hidden"></iframe>';
+      document.body.appendChild(ns);
+    }
+
+    // Google Ads (gtag)
+    if (ADS_ID && !document.querySelector('script[src*="gtag/js?id="]')) {
+      var s=document.createElement('script');
+      s.async=true; s.src='https://www.googletagmanager.com/gtag/js?id='+ADS_ID;
+      document.head.appendChild(s);
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      window.gtag = window.gtag || gtag;
+      gtag('js', new Date());
+      gtag('config', ADS_ID);
+    }
+  });
   </script>
+  <!-- /Carga aislada de GTM y Google Ads -->
 
 </body>
                 </html>
