--- a/index.html
+++ b/index.html
@@ -1334,11 +1334,7 @@
 </div>
 <div>
   <label class="block text-sm font-medium text-gray-700 mb-2">Condiciones de garantía (plantilla)</label>
-  <textarea id="garantia_plantilla" name="garantia_plantilla" rows="5" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" placeholder="Este texto se guarda como plantilla para el taller. No impacta otros módulos aún.">Las reparaciones tienen una garantía de 60 días únicamente por la misma falla reparada.
-Los repuestos están garantizados solo por defectos de fábrica.
-La garantía no cubre daños ocasionados por golpes, roturas, líquidos o uso indebido.
-Los trabajos de software y configuraciones no tienen garantía.</textarea>
-  <p class="text-xs text-gray-500 mt-1">Se guarda en el sistema pero no se usa todavía.</p>
+  <textarea name="garantia_plantilla" rows="5" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" placeholder="Texto de garantía del taller (se guarda como plantilla)."></textarea>
 </div>
 
 <button class="w-full bg-blue-600 text-white py-3 px-4 rounded-lg hover:bg-blue-700 transition duration-200 flex items-center justify-center" type="submit">
@@ -2862,24 +2858,7 @@ Los trabajos de software y configuraciones no tienen garantía.</textarea>
                         La garantía no cubre daños ocasionados por golpes, roturas, líquidos o uso indebido.<br>
                         Los trabajos de software y configuraciones no tienen garantía.
                     </div>
-                
-<script>
-document.addEventListener('DOMContentLoaded', function(){
-  try{
-    var raw = localStorage.getItem('fixlytallerData');
-    if(raw){
-      var d = JSON.parse(raw)||{};
-      var cfg = d.configTaller || d.config || {};
-      if(cfg.garantia_plantilla){
-        var ta = document.getElementById('garantia_plantilla');
-        if(ta){ ta.value = cfg.garantia_plantilla; }
-      }
-    }
-  }catch(e){}
-});
-</script>
-
-</body>
+                </body>
                 </html>
             `);
             
