--- a/index.html
+++ b/index.html
@@ -1297,7 +1297,9 @@
         Ajustes del sistema y gestión de técnicos
        </p>
 </div>
-<div class="grid grid-cols-1 lg:grid-cols-2 gap-8"><div class="card bg-white p-6 rounded-xl">
+<div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
+<!-- Información del Taller -->
+<div class="card bg-white p-6 rounded-xl">
 <h3 class="text-xl font-semibold mb-6 flex items-center">
 <i class="fas fa-store text-blue-600 mr-2">
 </i>
@@ -1341,32 +1343,9 @@
           Guardar Información
          </button>
 </form>
-</div><div class="card bg-white p-4 rounded-xl order-3">
-<h3 class="text-xl font-semibold mb-6 flex items-center">
-<i class="fas fa-shield-alt text-orange-600 mr-2">
-</i>
-         Sistema y Seguridad
-        </h3>
-<div class="space-y-4">
-<div>
-<label class="block text-sm font-medium text-gray-700 mb-2">
-           Cambiar Contraseña
-          </label>
-<input class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-orange-500 focus:border-orange-500" id="nueva-password" placeholder="Nueva contraseña" type="password"/>
 </div>
-<div>
-<label class="block text-sm font-medium text-gray-700 mb-2">
-           Confirmar Contraseña
-          </label>
-<input class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-orange-500 focus:border-orange-500" id="confirmar-password" placeholder="Confirmar nueva contraseña" type="password"/>
-</div>
-<button class="w-full bg-orange-600 text-white py-3 px-4 rounded-lg hover:bg-orange-700 transition duration-200 flex items-center justify-center" onclick="cambiarPassword()">
-<i class="fas fa-key mr-2">
-</i>
-          Cambiar Contraseña
-         </button>
-</div>
-</div><div class="card bg-white p-6 rounded-xl">
+<!-- Gestión de Técnicos -->
+<div class="card bg-white p-6 rounded-xl">
 <div class="flex justify-between items-center mb-6">
 <h3 class="text-xl font-semibold flex items-center">
 <i class="fas fa-users-cog text-green-600 mr-2">
@@ -1426,6 +1405,72 @@
 <i class="fas fa-trash">
 </i>
 </button>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="grid grid-cols-1 lg:grid-cols-2 gap-8 mt-8">
+<!-- Sistema y Seguridad -->
+<div class="card bg-white p-4 rounded-xl">
+<h3 class="text-xl font-semibold mb-6 flex items-center">
+<i class="fas fa-shield-alt text-orange-600 mr-2">
+</i>
+         Sistema y Seguridad
+        </h3>
+<div class="space-y-4">
+<div>
+<label class="block text-sm font-medium text-gray-700 mb-2">
+           Cambiar Contraseña
+          </label>
+<input class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-orange-500 focus:border-orange-500" id="nueva-password" placeholder="Nueva contraseña" type="password"/>
+</div>
+<div>
+<label class="block text-sm font-medium text-gray-700 mb-2">
+           Confirmar Contraseña
+          </label>
+<input class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-orange-500 focus:border-orange-500" id="confirmar-password" placeholder="Confirmar nueva contraseña" type="password"/>
+</div>
+<button class="w-full bg-orange-600 text-white py-3 px-4 rounded-lg hover:bg-orange-700 transition duration-200 flex items-center justify-center" onclick="cambiarPassword()">
+<i class="fas fa-key mr-2">
+</i>
+          Cambiar Contraseña
+         </button>
+</div>
+</div>
+<!-- Respaldo y Datos -->
+<div class="card bg-white p-4 rounded-xl">
+<h3 class="text-xl font-semibold mb-6 flex items-center">
+<i class="fas fa-database text-purple-600 mr-2">
+</i>
+         Respaldo y Datos
+        </h3>
+<div class="space-y-4">
+<button class="w-full bg-green-600 text-white py-3 px-4 rounded-lg hover:bg-green-700 transition duration-200 flex items-center justify-center" onclick="exportarDatos()">
+<i class="fas fa-download mr-2">
+</i>
+          Exportar Datos
+         </button>
+<button class="w-full bg-blue-600 text-white py-3 px-4 rounded-lg hover:bg-blue-700 transition duration-200 flex items-center justify-center" onclick="importarDatos()">
+<i class="fas fa-upload mr-2">
+</i>
+          Importar Datos
+         </button>
+<button class="w-full bg-red-600 text-white py-3 px-4 rounded-lg hover:bg-red-700 transition duration-200 flex items-center justify-center" onclick="limpiarTodosLosDatos()">
+<i class="fas fa-trash mr-2">
+</i>
+          Limpiar Todos los Datos
+         </button>
+<div class="text-xs text-gray-500 mt-4">
+<p>
+<strong>
+            Nota:
+           </strong>
+           El respaldo incluye todas las reparaciones, historial, técnicos y configuraciones.
+          </p>
+<p>
+           Se recomienda hacer respaldos periódicos de los datos.
+          </p>
 </div>
 </div>
 </div>
