--- a/index.html
+++ b/index.html
@@ -257,7 +257,9 @@
             background-color: #ea580c !important;
             box-shadow: 0 6px 8px -1px rgba(249, 115, 22, 0.5) !important;
         }
-  </style>
+  
+#lista-tecnicos{max-height:260px;overflow:auto;}
+</style>
 <style>
    @media print {
     body {
@@ -1345,7 +1347,7 @@
 </form>
 </div>
 <!-- Gestión de Técnicos -->
-<div class="card bg-white p-4 rounded-xl">
+<div class="card bg-white p-6 rounded-xl">
 <div class="flex justify-between items-center mb-6">
 <h3 class="text-xl font-semibold flex items-center">
 <i class="fas fa-users-cog text-green-600 mr-2">
@@ -1358,7 +1360,7 @@
           Agregar
          </button>
 </div>
-<div class="space-y-3" id="lista-tecnicos" style="max-height: 280px; overflow:auto;">
+<div class="space-y-3" id="lista-tecnicos">
 <div class="border border-gray-200 rounded-lg p-3 hover:bg-gray-50">
 <div class="flex justify-between items-center">
 <div>
