--- a/index.html
+++ b/index.html
@@ -1347,7 +1347,7 @@
 </form>
 </div>
 <!-- Gestión de Técnicos -->
-<div class="card bg-white p-6 rounded-xl">
+<div class="card bg-white p-4 rounded-xl self-start" style="align-self:start">
 <div class="flex justify-between items-center mb-6">
 <h3 class="text-xl font-semibold flex items-center">
 <i class="fas fa-users-cog text-green-600 mr-2">
