--- a/index.html
+++ b/index.html
@@ -1285,7 +1285,12 @@
 </select>
 </div>
 </div>
-<div class="space-y-3" id="lista-pedidos"></div>
+<div class="space-y-3" id="lista-pedidos"></div><div>
+<label class="block text-sm font-medium text-gray-700 mb-2">
+           Confirmar Contraseña
+          </label>
+<input class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-orange-500 focus:border-orange-500" id="confirmar-password" placeholder="Confirmar nueva contraseña" type="password"/>
+</div>
 </div>
 </div>
 </div>
@@ -1427,12 +1432,7 @@
           </label>
 <input class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-orange-500 focus:border-orange-500" id="nueva-password" placeholder="Nueva contraseña" type="password"/>
 </div>
-<div>
-<label class="block text-sm font-medium text-gray-700 mb-2">
-           Confirmar Contraseña
-          </label>
-<input class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-orange-500 focus:border-orange-500" id="confirmar-password" placeholder="Confirmar nueva contraseña" type="password"/>
-</div>
+
 <button class="w-full bg-orange-600 text-white py-3 px-4 rounded-lg hover:bg-orange-700 transition duration-200 flex items-center justify-center" onclick="cambiarPassword()">
 <i class="fas fa-key mr-2">
 </i>
